feat: Add Sign Up Use Case
Implement user registration functionality that allows users to create an
account Eusing their email and password. This includes validation common
issues such as duplicate emails.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,8 @@
 services:
   identity-db:
-    image: postgis/postgis:16-3.4
+    build:
+      context: .
+      dockerfile: docker/postgresql/Dockerfile
     ports:
       - ${POSTGRES_PORT}:5432
     env_file:
