feat: Add Sign Up
1. On this commit was implemented the jwt token using a PKI structure
and expose the JWKS.

2. Was added validation to the endpoints

3. Was created an initial structure for the unit tests

4. Was configured the migrations, and added
  4.1. auths table
  4.2. profiles table

--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,15 @@
+# MICROSERVICE ENV
 BEAT_IDENTITY_SERVER=
 
+# POSTGRES ENV
 POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 POSTGRES_PORT=
 POSTGRES_HOST=
+
+JWT_AUDIENCE=
+JWT_ISSUER=
+JWT_ACCESS_EXPIRED=
+JWT_REFRESH_EXPIRED=
+JWT_SECRET=
