--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,8 +7,13 @@ services:
       - ${POSTGRES_PORT}:5432
     env_file:
       - .env
+    networks:
+      - dev-net
     healthcheck:
-      test: [ "CMD", "pg_isready" ]
+      test: ["CMD", "pg_isready"]
       interval: 10s
       timeout: 5s
       retries: 5
+
+networks:
+  dev-net:
