feat: Keep track of Auth Token Expire time
Was configured an redis connection that holds an white list of every
created token, in order to validate which tokens are valid.

--- a/.env.example
+++ b/.env.example
@@ -8,8 +8,15 @@ POSTGRES_PASSWORD=
 POSTGRES_PORT=
 POSTGRES_HOST=
 
+# JWT ENV
 JWT_AUDIENCE=
 JWT_ISSUER=
 JWT_ACCESS_EXPIRED=
 JWT_REFRESH_EXPIRED=
 JWT_SECRET=
+
+# REDIS ENV
+REDIS_HOST=
+REDIS_PORT=
+REDIS_UI_PORT=
+REDIS_DB=
