feat: Add Login Capabilities
Also configure the rabbitqm queue "mail_sender" that is used push events
to the messaging micro service handle it and send it.

Also was added a new use case that handles the user login

--- a/.env.example
+++ b/.env.example
@@ -20,3 +20,14 @@ REDIS_HOST=
 REDIS_PORT=
 REDIS_UI_PORT=
 REDIS_DB=
+
+# Rabbit Mq
+RABBIT_MQ_HOST=
+RABBIT_MQ_PORT=
+RABBITMQ_DEFAULT_USER=
+RABBITMQ_DEFAULT_PASS=
+RABBITMQ_DEFAULT_VHOST=
+RABBIT_MQ_EXCHANGE=
+RABBIT_MQ_QUEUE_MAIL=
+RABBIT_MQ_ROUTING_KEY=
+RABBIT_MQ_UI_PORT=
