feat(auth): implement oauth endpoints and fix api structure

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -42,22 +42,22 @@ services:
     networks:
       - dev-net
 
-  broker:
-    container_name: rabbitmq
-    build:
-      context: docker/rabbitmq
-    ports:
-      - "${RABBIT_MQ_PORT}:5672"
-      - "${RABBIT_MQ_UI_PORT}:15672"
-    env_file:
-      - .env
-    networks:
-      - dev-net
-    healthcheck:
-      test: [ "CMD", "rabbitmq-diagnostics", "ping", "-q" ]
-      interval: 10s
-      timeout: 10s
-      retries: 15
+  # broker:
+  #   container_name: rabbitmq
+  #   build:
+  #     context: docker/rabbitmq
+  #   ports:
+  #     - "${RABBIT_MQ_PORT}:5672"
+  #     - "${RABBIT_MQ_UI_PORT}:15672"
+  #   env_file:
+  #     - .env
+  #   networks:
+  #     - dev-net
+  #   healthcheck:
+  #     test: [ "CMD", "rabbitmq-diagnostics", "ping", "-q" ]
+  #     interval: 10s
+  #     timeout: 10s
+  #     retries: 15
 
 networks:
   dev-net:
