--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,47 +17,9 @@ services:
   #     broker:
   #       condition: service_healthy
 
-  # identity-db:
-  #   build:
-  #     context: .
-  #     dockerfile: docker/postgresql/Dockerfile
-  #   ports:
-  #     - ${POSTGRES_PORT}:5432
-  #   env_file:
-  #     - .env
-  #   networks:
-  #     - dev-net
-  #   healthcheck:
-  #     test: [ "CMD", "pg_isready" ]
-  #     interval: 10s
-  #     timeout: 5s
-  #     retries: 5
-
   redis:
     container_name: redis
-    image: redis/redis-stack:latest
+    image: docker.io/redis/redis-stack:latest
     ports:
       - "${REDIS_PORT}:6379"
       - "${REDIS_UI_PORT}:8001"
-    networks:
-      - dev-net
-
-  # broker:
-  #   container_name: rabbitmq
-  #   build:
-  #     context: docker/rabbitmq
-  #   ports:
-  #     - "${RABBIT_MQ_PORT}:5672"
-  #     - "${RABBIT_MQ_UI_PORT}:15672"
-  #   env_file:
-  #     - .env
-  #   networks:
-  #     - dev-net
-  #   healthcheck:
-  #     test: [ "CMD", "rabbitmq-diagnostics", "ping", "-q" ]
-  #     interval: 10s
-  #     timeout: 10s
-  #     retries: 15
-
-networks:
-  dev-net:
